syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "sbom/";
package bomsquad.protobom;

message Document {
    Metadata metadata = 1;
    NodeList node_list = 2;
}

message Node {
    string id = 1;
    NodeType type = 2;
    string name = 3;
    string version = 4;    // Version string
    string file_name = 5;    // Package filename when there is one

    string url_home = 6; // Website of the packge
    string url_download = 7;    // Location to download the package

    repeated string licenses = 8; // Multiple for CDX 1.4, files in SPDX. Ideally license expressions
    string license_concluded = 9; // This is only in SPDX and it is just one
    string license_comments = 10;
    string copyright = 11;

    // field 12 was the old hashes string map.
    // Removed, see https://github.com/bom-squad/protobom/issues/89
    // map<string,string> hashes = 12;

    string source_info = 13;     // any relevant background information or additional comments about the origin
    // field 14 was the old string primary_purpose.
    // Removed, see https://github.com/bom-squad/protobom/issues/124
    // string primary_purpose = 14; // APPLICATION | FRAMEWORK | LIBRARY | CONTAINER | OPERATING-SYSTEM | DEVICE | FIRMWARE | SOURCE | ARCHIVE | FILE | INSTALL | OTHER |

    string comment = 15;
    string summary = 16;      // Short package description
    string description = 17;  // Package description (full)

    repeated string attribution = 18; // One or more attribution texts
    repeated Person suppliers = 19;
    repeated Person originators = 20;

    google.protobuf.Timestamp release_date = 21;
    google.protobuf.Timestamp build_date = 22;
    google.protobuf.Timestamp valid_until_date = 23;

    repeated ExternalReference external_references = 24;

    // field 25 was the old identifier list.
    // Removed, see https://github.com/bom-squad/protobom/issues/64
    // repeated Identifier identifiers = 25;

    repeated string file_types = 27; // File types
    map<int32,string> identifiers = 28;  // Software identifiers
    map<int32,string> hashes = 29;
    Purpose primary_purpose = 30;

    enum NodeType {
        PACKAGE = 0;
        FILE = 1;
    }
}

message Metadata {
    string id = 1; // Serial number in cyclone, SPDXID in spdx
    string version = 2; // Int in CDX, but lets string it to capture other possible schemes
    string name = 3;
    google.protobuf.Timestamp date = 4; // created date in spdx
    repeated Tool tools = 5;
    repeated Person authors = 6;
    string comment = 7;
    repeated DocumentType documentTypes = 8;
}

message Edge {
    Type type = 1;
    string from = 2;
    repeated string to = 3;
    enum Type {
        UNKNOWN = 0;
        amends = 1;
        ancestor = 2;
        buildDependency = 3;
        buildTool = 4;
        contains = 5;
        contained_by = 6; // Not in SPDX3
        copy = 7;
        dataFile = 8;
        dependencyManifest = 9;
        dependsOn = 10;
        dependencyOf = 11; // Not in SPDX3
        descendant = 12;
        describes = 13;
        describedBy = 14; // Not in SPDX3
        devDependency = 15;
        devTool = 16;
        distributionArtifact = 17;
        documentation = 18;
        dynamicLink = 19;
        example = 20;
        expandedFromArchive = 21;
        fileAdded = 22;
        fileDeleted = 23;
        fileModified = 24;
        generates = 25;
        generatedFrom = 26; // Not in SPDX3
        metafile = 27;
        optionalComponent = 28;
        optionalDependency = 29;
        other = 30;
        packages = 31;
        patch = 32;
        prerequisite = 33;
        prerequisiteFor = 34; // Not in SPDX3
        providedDependency = 35;
        requirementFor = 36;
        runtimeDependency = 37;
        specificationFor = 38;
        staticLink = 39;
        test = 40;
        testCase = 41;
        testDependency = 42;
        testTool = 43;
        variant = 44;
    }
}

// ExternalReference is an entry linking an element to a resource defined outside the SBOM standard
message ExternalReference {
    string url = 1;
    string type = 2;
    string comment = 3;
    string authority = 4;
    // Field 5 was the old string map.
    // Removed, see https://github.com/bom-squad/protobom/issues/89
    map<int32,string> hashes = 6;
}

message Person {
    string name = 1;
    bool is_org = 2;
    string email  = 3;
    string url = 4;
    string phone = 5;             // CDX
    repeated Person contacts = 6; // CDX // Support?
	// repeated PersonIdentifier identifiers // Support?
}

message Tool {
    string name = 1;
    string version = 2;
    string vendor = 3;
}

message DocumentType {
    optional SBOMType type = 1;
    optional string name = 2;
    optional string description = 3;

    enum SBOMType {
        OTHER = 0;
        DESIGN = 1; // CDX: design
        SOURCE = 2; // CDX: pre-build
        BUILD = 3; // CDX: build
        ANALYZED = 4; // CDX: post-build
        DEPLOYED = 5; // CDX: operations
        RUNTIME = 6; // CDX: none
        DISCOVERY = 7;  // CDX Specific
        DECOMISSION = 8; // CDX Specific
    }
}

message NodeList {
    repeated Node nodes = 1;
    repeated Edge edges = 2;
    repeated string root_elements = 3;
}

enum HashAlgorithm {
    UNKNOWN = 0;
    MD5 = 1;
    SHA1 = 2;
    SHA256 = 3;
    SHA384 = 4;
    SHA512 = 5;
    SHA3_256 = 6;
    SHA3_384 = 7;
    SHA3_512 = 8;
    BLAKE2B_256 = 9;
    BLAKE2B_384 = 10;
    BLAKE2B_512 = 11;
    BLAKE3 = 12;

    //2DO what should we do
    MD2 = 13; // Only supported by SPDX
    ADLER32 = 14; // Only supported by SPDX
    MD4 = 15; // Only supported by SPDX
    MD6 = 16; // Only supported by SPDX
    SHA224 = 17; // Only supported by SPDX
}

enum SoftwareIdentifierType {
    UNKNOWN_IDENTIFIER_TYPE = 0;
    PURL = 1;
    CPE22 = 2;
    CPE23 = 3;
    GITOID = 4;
}

enum Purpose {
    UNKNOWN_PURPOSE = 0;
    APPLICATION = 1;
    FRAMEWORK = 2;
    LIBRARY = 3;
    CONTAINER = 4;
    OPERATINGSYSTEM = 5;
    DEVICE = 6;
    FIRMWARE = 7;
    SOURCE = 8;
    ARCHIVE = 9;
    FILE = 10;
    INSTALL = 11;
    OTHER = 12;
}
